Added models and views for a number of new content types.

--- a/app/views/info:fedora/cm:text.fac_pubs/_show.html.erb
+++ b/app/views/info:fedora/cm:text.fac_pubs/_show.html.erb
@@ -33,7 +33,7 @@
 			<tr class="file_asset" id="result1">
 			  <td>
                 <% title = get_values_from_datastream(@document_fedora, "DCA-META", [:title])%>
-			    <%=disseminator_link params[:id], "Archival.pdf" %>
+			    <%=raw disseminator_link params[:id], "Archival.pdf" %>
 
 			  </td>
 			  <td>
