--- a/app/views/tufts_wps/_show.html.erb
+++ b/app/views/tufts_wps/_show.html.erb
@@ -9,16 +9,16 @@
           <%= showMetadataItem("Date Created", "dateCreated", :dateCreated) %>
           <%= showMetadataItem("Date Available", "dateAvailable", :dateAvailable) %>
           <%= showMetadataItem("Date Issued", "dateIssued", :dateIssued) %>
-          <%= showMetadataItem("Identifier", "identifier", :identifier) %>
+          <%= showMetadataItem("Citable URL", "identifier", :identifier) %>
           <%= showMetadataItem("Rights", "rights", :rights) %>
-          <%= showMetadataItem("Bibliographic Citation", "bibliographicCitation", :bibliographicCitation) %>
+          <%= showMetadataItem("Citation", "bibliographicCitation", :bibliographicCitation) %>
           <%= showMetadataItem("Publisher", "publisher", :publisher) %>
           <%= showMetadataItem("Type", "type2", :type2) %>
           <%= showMetadataItem("Format", "format2", :format2) %>
           <%= showMetadataItem("Person Name", "persname", :persname) %>
-          <%= showMetadataItem("Corp Name", "corpname", :corpname) %>
-          <%= showMetadataItem("Place Name", "geogname", :geogname) %>
-          <%= showMetadataItem("Subject", "subject", :subject) %>
+          <%= showMetadataItem("Organizations", "corpname", :corpname) %>
+          <%= showMetadataItem("Places", "geogname", :geogname) %>
+          <%= showMetadataItem("Topics", "subject", :subject) %>
           <%= showMetadataItem("Funder", "funder", :funder) %>
           <%= showMetadataItem("Temporal", "temporal", :temporal) %>
           <%= showMetadataItem("Resolution", "resolution", :resolution) %>
