swapped the afmodel to be first on facpubs and pdf.  makes more sense since on new objects post the merge, there will be only an afmodel so it will by default be first.

--- a/app/views/tufts_pdfs/_show.html.erb
+++ b/app/views/tufts_pdfs/_show.html.erb
@@ -53,6 +53,6 @@
         </div>
         <% source_url = datastream_disseminator_url(params[:id], "Archival.pdf") %>
         <a class="fbImage" id="single_image" href="<%= source_url %>">PDF</a>
-        <a class="fbImage" id="single_image" href="<%= file_asset_path(params[:id]) %>">PDF</a>
+        <a class="fbImage" id="single_image" href="<%= file_asset2_path(params[:id]) %>">PDF</a>
 
 </div>
