--- a/app/views/tufts_faculty_publications/_index.html.erb
+++ b/app/views/tufts_faculty_publications/_index.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "info:fedora/tufts_faculty_publications/index_table", :locals => {:document => document, :counter => counter } %>
+<%= render :partial => "tufts_faculty_publications/index_table", :locals => {:document => document, :counter => counter } %>
