Adding OM for Wildlife Pathology model.  Not yet working.

--- a/app/views/tufts_wps/_show.html.erb
+++ b/app/views/tufts_wps/_show.html.erb
@@ -29,3 +29,6 @@
         <div>
           <%= showImage(params[:id]) %>
         </div>
+        <div>
+          <%= showWPMetadataItem("Title", "title", :title) %>
+        </div>
