More work on WP, RCR and image w/ HTML content types.

--- a/app/views/tufts_rcrs/_show.html.erb
+++ b/app/views/tufts_rcrs/_show.html.erb
@@ -26,3 +26,18 @@
           <%= showMetadataItem("Color Space", "colorSpace", :colorSpace) %>
           <%= showMetadataItem("File Size", "filesize", :filesize) %>
         </div>
+        <div>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Record ID", "recordId", :recordId) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Maintenance Status", "maintenanceStatus", :maintenanceStatus) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Maintenance Agency", "maintenanceAgency", :maintenanceAgency) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Language Declaration", "languageDeclaration", :languageDeclaration) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Convention Declaration", "conventionDeclaration", :conventionDeclaration) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Maintenance History", "maintenanceHistory", :maintenanceHistory) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Sources", "sources", :sources) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Identity", "identity", :identity) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Description", "description", :description) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Biographical History", "biogHist", :biogHist) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Structure or Genealogy", "structureOrGenealogy", :structureOrGenealogy) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "CPF Relation", "cpfRelation", :cpfRelation) %>
+          <%= showMetadataItemForDatastream("RCR-CONTENT", "Resource Relation", "resourceRelation", :resourceRelation) %>
+       </div>
