--- a/app/views/tufts_wps/_show.html.erb
+++ b/app/views/tufts_wps/_show.html.erb
@@ -30,5 +30,56 @@
           <%= showImage(params[:id]) %>
         </div>
         <div>
-          <%= showWPMetadataItem("Title", "title", :title) %>
-        </div>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Original Filename", "originalFilename", :originalFilename) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Title", "title", :title) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Picture Format", "pictureFormat", :pictureFormat) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Case Number", "caseNumber", :caseNumber) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Identifier", "identifier", :identifier) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Contributing Partner", "contributingPartner", :contributingPartner) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Type", "type", :_type) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Type Detail", "typeDetail", :typeDetail) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Creator", "creator", :creator) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Creator Type", "creatorType", :creatorType) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Creators Affiliation", "creatorsAffiliation", :creatorsAffiliation) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "License Statement", "licenseStatement", :licenseStatement) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Responsible Party", "responsibleParty", :responsibleParty) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Responsible Party's Email", "responsiblePartysEmail", :responsiblePartysEmail) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Nature Of Content", "natureOfContent", :natureOfContent) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Description", "description", :description) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Gross Diagnosis", "grossDiagnosis", :grossDiagnosis) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Preferred Keywords", "preferredKeywords", :preferredKeywords) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Other Keywords", "otherKeywords", :otherKeywords) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Date Original", "dateOriginal", :dateOriginal) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Date Digital", "dateDigital", :dateDigital) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Date Modified", "dateModified", :dateModified) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Scientific Name", "scientificName", :scientificName) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Scientific Name Source", "scientificNameSource", :scientificNameSource) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "TSN", "tsn", :tsn) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Common Names", "commonNames", :commonNames) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Order", "order", :order) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Sex", "sex", :sex) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Stage", "stage", :stage) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "View Of Subject", "viewOfSubject", :viewOfSubject) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Part Of Subject", "partOfSubject", :partOfSubject) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Formal Classification", "formalClassification", :formalClassification) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Formal Classification Source", "formalClassificationSource", :formalClassificationSource) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Peer Or Expert Reviewed", "peerOrExpertReviewed", :peerOrExpertReviewed) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Peer O rExpert Reviewer Comment", "peerOrExpertReviewerComment", :peerOrExpertReviewerComment) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "State Or Province", "stateOrProvince", :stateOrProvince) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "County Or SubProvince", "countyOrSubProvince", :countyOrSubProvince) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Capture Device", "captureDevice", :captureDevice) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Capture Details", "captureDetails", :captureDetails) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Digitization Methods", "digitizationMethods", :digitizationMethods) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Extent", "extent", :extent) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Color", "color", :color) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Date Collected", "dateCollected", :dateCollected) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Comments On Collection", "commentsOnCollection", :commentsOnCollection) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Background Information", "backgroundInformation", :backgroundInformation) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Background Links", "backgroundLinks", :backgroundLinks) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Latitude", "latitude", :latitude) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Longitude", "longitude", :longitude) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Disease Name", "diseaseName", :diseaseName) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Disease Type", "diseaseType", :diseaseType) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Disease Aspect", "diseaseAspect", :diseaseAspect) %>
+          <%= showMetadataItemForDatastream("Metadata.xml", "Disease Agent", "diseaseAgent", :diseaseAgent) %>
+       </div>
