--- a/app/views/tufts_image_texts/_show.html.erb
+++ b/app/views/tufts_image_texts/_show.html.erb
@@ -29,3 +29,6 @@
         <div>
           <%= showImage(params[:id]) %>
         </div>
+        <div>
+          <%= showHTML(params[:id]) %>
+        </div>
