Changes and additions for audio player.

--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,6 +1,9 @@
 <% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
 <%= javascript_include_tag "flexpaper_flash" %>
+<% javascript_includes << "yahooMediaPlayer.js" %>
+<% javascript_includes << "audio_player.js" %>
+<% stylesheet_links << "audio_player.css" %>
 
         <div class="document_viewer" id="cover_container">
           <%= showMetadataItem("Creator", "creator", :creator) %>
@@ -25,4 +28,7 @@
           <%= showMetadataItem("Bit Depth", "bitDepth", :bitDepth) %>
           <%= showMetadataItem("Color Space", "colorSpace", :colorSpace) %>
           <%= showMetadataItem("File Size", "filesize", :filesize) %>
+        </div>
+        <div>
+          <%= showAudioPlayer(params[:id]) %>
         </div>
