--- a/app/views/tufts_eads/_show.html.erb
+++ b/app/views/tufts_eads/_show.html.erb
@@ -1,6 +1,8 @@
 <% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
 <%= javascript_include_tag "flexpaper_flash" %>
+<% javascript_includes << "feedback.js" %>
+<% stylesheet_links << "feedback.css" %>
 
         <div class="document_viewer" id="cover_container">
           <%= showMetadataItem("Creator", "creator", :creator) %>
@@ -25,4 +27,5 @@
           <%= showMetadataItem("Bit Depth", "bitDepth", :bitDepth) %>
           <%= showMetadataItem("Color Space", "colorSpace", :colorSpace) %>
           <%= showMetadataItem("File Size", "filesize", :filesize) %>
-        </div>
+          <%= showFeedbackForm(params[:id]) %>
+     </div>
