Made feedback link go to default blacklight feedback form if javascript is disabled.

--- a/public/stylesheets/feedback.css
+++ b/public/stylesheets/feedback.css
@@ -32,3 +32,22 @@
   float: right;
 }
 
+#feedbackBodyRow {
+  display: none;
+}
+
+#feedbackEmailRow {
+  display: none;
+}
+
+#feedbackSubmitRow {
+  display: none;
+}
+
+#feedbackHideRow {
+  display: none;
+}
+
+#feedbackShowRow {
+  display: none;
+}
