changed more options link to advanced search

--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -7,7 +7,7 @@
 
     <%= image_submit_tag('tdl/search_button.png', :plugin=>"hydra-head", :id => "submit", :alt=>"Search") %>
   <% end %>
+  <%= link_to 'Advanced Search', params.merge(:controller=>"advanced", :action=>"index") , :class=>"advanced_search"%>
 
-  <hr/>
 </div>
 
