--- a/app/views/layouts/tdl.html.erb
+++ b/app/views/layouts/tdl.html.erb
@@ -28,11 +28,11 @@
           <div class="yui-u user_util_links">
             <nav class="round">
               <ul id="navigation">
-                <li><%= link_to "Search", 'search' %></li>
-                <!-- <li><%= link_to "Browse", 'browse' %></li>    -->
-                <li><%= link_to "About", 'about' %></li>
-                <li><%= link_to "Contact", 'contact' %></li>
-                <li><%= link_to "Home", 'catalog' %></li>
+                <li><%= link_to "Search", '/search' %></li>
+                <!-- <li><%= link_to "Browse", '/browse' %></li>    -->
+                <li><%= link_to "About", '/about' %></li>
+                <li><%= link_to "Contact", '/contact' %></li>
+                <li><%= link_to "Home", '/catalog' %></li>
               </ul>
             </nav>
           </div>
