added a link to the image viewer

--- a/app/views/tufts_images/_show.html.erb
+++ b/app/views/tufts_images/_show.html.erb
@@ -32,3 +32,6 @@
         <div>
           <%= showImage(params[:id]) %>
         </div>
+        <div>
+          <%= render_image_viewer_link(params[:id]) %>
+        </div>
