Checking in four files with work towards getting TuftsAudioText objects to spew their transcripts onto the page.  Not done yet in that they still contain debug output and, well, don't actually work.  Checking them in now so I can pull and merge other changes.

--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -35,3 +35,6 @@
         <div>
           <%= showAudioPlayer(params[:id]) %>
         </div>
+        <div id="transcript_goes_here">
+          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Title", "title", :title) %>
+        </div>
