Latest changes to TuftsAudioText for using OM to parse and emit transcript.

--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -36,5 +36,5 @@
           <%= showAudioPlayer(params[:id]) %>
         </div>
         <div id="transcript_goes_here">
-          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Title", "title", :title) %>
+          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Author", "author", :author) %>
         </div>
