--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -36,9 +36,5 @@
           <%= showAudioPlayer(params[:id]) %>
         </div>
         <div id="transcript">
-          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "ID", "id_attr", :id_attr) %>
-          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Name", "p", :p) %>
-          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Role", "role_attr", :role_attr) %>
-          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Speaker", "who_attr", :who_attr) %>
-          <%= showMetadataItemForDatastream("ARCHIVAL_XML", "Utterance", "u_inner", :u_inner) %>
-        </div>
+          <%= showTranscriptFromDatastream("ARCHIVAL_XML") %>
+        </div> <!-- id="transcript" -->
