organizing css for bookreader

--- a/app/views/layouts/imageviewer.html.erb
+++ b/app/views/layouts/imageviewer.html.erb
@@ -3,7 +3,7 @@
 <head>
     <title>bookreader demo</title>
 
-    <link rel="stylesheet" type="text/css" href="/stylesheets/BookReader.css"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/bookreader/BookReader.css"/>
     <!-- Custom CSS overrides -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/BookReaderImageViewer.css"/>
 
