--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,9 +1,8 @@
 <% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
-<%= javascript_include_tag "flexpaper_flash" %>
 <% javascript_includes << "yahooMediaPlayer.js" %>
 <% javascript_includes << "audio_player.js" %>
-<% stylesheet_links << "audio_player.css" %>
+<% stylesheet_links << "audio/audio_player.css" %>
 <% javascript_includes << "feedback.js" %>
 <% stylesheet_links << "feedback.css" %>
 
