--- a/app/views/tufts_audios/_show.html.erb
+++ b/app/views/tufts_audios/_show.html.erb
@@ -2,7 +2,7 @@
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << "yahooMediaPlayer.js" %>
 <% javascript_includes << "audio_player.js" %>
-<% stylesheet_links << "audio_player.css" %>
+<% stylesheet_links << "audio/audio_player.css" %>
 <% javascript_includes << "feedback.js" %>
 <% stylesheet_links << "feedback.css" %>
 
