removed all the old flexplayer links and reorged the feedback css

--- a/app/views/tufts_faculty_publications/_show.html.erb
+++ b/app/views/tufts_faculty_publications/_show.html.erb
@@ -1,8 +1,7 @@
 <% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
-<%= javascript_include_tag "flexpaper_flash" %>
-<% javascript_includes << "feedback.js" %>
-<% stylesheet_links << "feedback.css" %>
+<% javascript_includes << "feedback/feedback.js" %>
+<% stylesheet_links << "feedback/feedback.css" %>
 
 <div class="document_viewer" id="cover_container">
 
