--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -4,7 +4,7 @@
 <% javascript_includes << "audio_player.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
 <% javascript_includes << "feedback.js" %>
-<% stylesheet_links << "feedback.css" %>
+<% stylesheet_links << "feedback/feedback.css" %>
 
         <div class="document_viewer" id="cover_container">
           <%= showMetadataItem("Creator", "creator", :creator) %>
