moved js to audio folder

--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,7 +1,7 @@
 <% javascript_includes << ['custom', {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << "yahooMediaPlayer.js" %>
-<% javascript_includes << "audio_player.js" %>
+<% javascript_includes << "audio/audio_player.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
 <% javascript_includes << "feedback.js" %>
 <% stylesheet_links << "feedback/feedback.css" %>
