moved bookreader and imageviewer js

--- a/app/views/layouts/imageviewer.html.erb
+++ b/app/views/layouts/imageviewer.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_include_tag 'bookreader/jquery.colorbox-min' %>
     <%= javascript_include_tag 'bookreader/jquery.ui.ipad' %>
     <%= javascript_include_tag 'bookreader/jquery.bt.min' %>
-    <script type="text/javascript" src="/javascripts/BookReader.js"></script>
+    <script type="text/javascript" src="/javascripts/bookreader/BookReader.js"></script>
 </head>
 <body style="background-color: #939598;">
 <%= yield %>
