--- a/app/views/tufts_faculty_publications/_index_table.html.erb
+++ b/app/views/tufts_faculty_publications/_index_table.html.erb
@@ -4,5 +4,6 @@
   <td class="document_work"><%= document[:title_t] %></td>
   <td class="document_date"><%= format_date(DateTime.parse(document[:system_create_dt]).to_time) %></td>
   <td class="document_files"> 1</td>
+  <td class="document_files">&nbsp;</td>
 </tr>
 
