--- a/app/views/tufts_rcrs/_index.html.erb
+++ b/app/views/tufts_rcrs/_index.html.erb
@@ -4,7 +4,6 @@
   <td class="document_work"><%= document[:title_t] %></td>
   <td class="document_date"><%= format_date(DateTime.parse(document[:system_create_dt]).to_time) %></td>
   <td class="document_files"> 1</td>
-  <td class="document_files">&nbsp;</td>
-
+  <td>&nbsp;</td>
 </tr>
 
