--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -2,6 +2,7 @@
 <% javascript_includes << ["catalog/show", {:plugin=>:hydra_repository, :media=>"all"}] %>
 <% javascript_includes << "yahooMediaPlayer.js" %>
 <% javascript_includes << "audio/audio_player.js" %>
+<% javascript_includes << "audio/transcript_scroller.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
 <% javascript_includes << "feedback.js" %>
 <% stylesheet_links << "feedback/feedback.css" %>
