--- a/public/stylesheets/tdl.css
+++ b/public/stylesheets/tdl.css
@@ -87,6 +87,12 @@ input#submit {
   color: darkgray;
 }
 
+.transcript_scrollarea {
+  width: 100%;
+  height: 400px;
+  overflow: scroll;
+}
+
 .transcript_table {
   display: table;
 }
