bulk of /search page

--- a/app/views/catalog/_search.html.erb
+++ b/app/views/catalog/_search.html.erb
@@ -1,6 +1,6 @@
 <div class="subnav">
   <ul class="nav nav-pills">
-    <li> <a href="#back"><i class="icon-arrow-left"></i> Back</a></li>
+    <li> <a href="/"><i class="icon-arrow-left"></i> Back</a></li>
   </ul>
 </div>
 
@@ -16,8 +16,7 @@
 
 <!-- nested row SIDE FOR DOC INFO TYPE OR GALLERY LINK -->
 <div class="row-fluid">
-
-<% render :partial=>'/catalog/facet_nav' %>
+    <%= render :partial => 'facet_nav' %>
 <div class="span6">
 <h3>Search</h3>
 
