refactor to move text dca will exit to one dir of views.

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -5,10 +5,10 @@
 
   <!-- MAIN CONTENT AREA -->
   <div class="span7">
-    <%= render :partial => 'welcome' %>
+    <%= render :partial => 'dca_text/welcome' %>
   </div>
 
   <div class="span9">
-    <%= render :partial => "collections" %>
+    <%= render :partial => "dca_text/collections" %>
   </div>
 </div>
