--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'shared/search_form' %>
+<%= render :partial => 'shared/search_bar' %>
 <div class="row">
 
   <%= render :partial => 'facet_nav' %>
