--- a/public/assets/css/bootstrap-responsive.css
+++ b/public/assets/css/bootstrap-responsive.css
@@ -1,11 +1,12 @@
 /*!
  * Bootstrap Responsive v2.0.1
- *
+ * EDITED FOR TUFTS UNIVERSITY DIGITAL LIBRARY BY ESTS-AT-UIT
+ SOME RESPONSIVE ACTIONS ARE COMMENTED OUT FOR NOW 3-20-2012
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
  *
- * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ * 
  */
 .clearfix {
   *zoom: 1;
@@ -21,7 +22,7 @@
   display: none;
   visibility: hidden;
 }
-@media (max-width: 480px) {
+@media (max-width: 400px) {
   .nav-collapse {
     -webkit-transform: translate3d(0, 0, 0);
   }
@@ -393,11 +394,17 @@
     height: 0;
   }
 }
-@media (min-width: 899px) {
+
+/*! 
+Comment this out until we are ready to go to something smaller and include the button/top nav menu toggle for smaller screens.
+
+  @media (min-width: 899px) {
   .nav-collapse.collapse {
     height: auto !important;
   }
-}
+}  */
+
+
 @media (min-width: 1200px) {
   .row {
     margin-left: -30px;
