--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -264,7 +264,7 @@ a:hover {
   width: 99.99999998999999%;
 }
 .container {
-  width: 800px;
+  width: 1025px;
   margin-left: auto;
   margin-right: auto;
   *zoom: 1;
@@ -292,7 +292,7 @@ p {
   margin: 0 0 9px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
-  line-height: 18px;
+  line-height: 20px;
 }
 p small {
   font-size: 11px;
@@ -311,7 +311,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-weight: bold;
+  font-weight: 500;
   color: #333333;
   text-rendering: optimizelegibility;
 }
@@ -325,8 +325,8 @@ h6 small {
   color: #999999;
 }
 h1 {
-  font-size: 30px;
-  line-height: 36px;
+  font-size: 24px;
+  line-height: 26px;
   color: #de6020;
 }
 h1 small {
@@ -334,30 +334,30 @@ h1 small {
 }
 h2 {
   font-size: 20px;
-  line-height: 36px;
+  line-height: 24px;
   color: #de6020;
 }
 h2 small {
   font-size: 18px;
 }
 h3 {
-  line-height: 27px;
-  font-size: 18px;
+  line-height: 24px;
+  font-size: 20px;
 }
 h3 small {
-  font-size: 14px;
+  font-size: 17px;
 }
 h4, h5, h6 {
-  line-height: 18px;
+  line-height: 20px;
 }
 h4 {
-  font-size: 14px;
+  font-size: 16px;
 }
 h4 small {
   font-size: 12px;
 }
 h5 {
-  font-size: 12px;
+  font-size: 14px;
 }
 h6 {
   font-size: 11px;
@@ -370,7 +370,7 @@ h6 {
     margin-bottom: 10px;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 30px;
+    margin-top: 50px;
     padding-bottom: 10px;
 }
 
@@ -403,16 +403,20 @@ ul.unstyled, ol.unstyled {
   list-style: none;
 }
 dl {
-  margin-bottom: 18px;
+  margin-bottom: 30px;
 }
 dt, dd {
-  line-height: 18px;
+  line-height: 20px;
 }
 dt {
-  font-weight: bold;
+	color:#000000;
+  font-weight: normal;
+   margin-left: 15px;
 }
 dd {
-  margin-left: 9px;
+	color:#333;
+  margin-left: 0px;
+  font-weight:300;
 }
 hr {
   margin: 18px 0;
@@ -1194,7 +1198,7 @@ table .span12 {
   *margin-left: 0;
 }
 .icon-white {
-  background-image: url("../img/glyphicons-halflings-white.png");
+  background-image: url("../../../../../Documents/colelatimer/colelatimer.com/archive/dl/docs/assets/img/glyphicons-halflings-white.png");
 }
 .icon-glass {
   background-position: 0      0;
@@ -3400,11 +3404,12 @@ a.thumbnail:hover {
 
 /* Subnav */
 .subnav {
-	min-height: 46px;
+    min-height: 40px;
+	margin-bottom: 30px;
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 10px;
-    padding-top: 20px;
+    padding-top: 16px;
     -moz-border-bottom-colors: none;
     -moz-border-image: none;
     -moz-border-left-colors: none;
